# internal/modules/auth/handler/handler.go
@@ -9,8 +9,7 @@ import (
 )
 
 type Handler struct {
-	LoginUseCase    *usecase.LoginUseCase
-	RegisterUseCase *usecase.RegisterUseCase
+	LoginUseCase *usecase.LoginUseCase
 }
 
 // Login godoc
@@ -41,33 +40,4 @@ func (h *Handler) Login(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "internal error"})
 	}
 	return c.JSON(http.StatusOK, map[string]string{"token": token})
-}
-
-// Register godoc
-// @Summary User registration
-// @Description Register a new user with role 'user'
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param user body RegisterDTO true "User registration data"
-// @Success 201 {object} map[string]string "created"
-// @Failure 400 {object} map[string]string "invalid data or user exists"
-// @Failure 500 {object} map[string]string "internal error"
-// @Router /v1/auth/register [post]
-func (h *Handler) Register(c echo.Context) error {
-	var input RegisterDTO
-	if err := c.Bind(&input); err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": errors.ErrInvalidData.Error()})
-	}
-	if input.Username == "" || input.Password == "" {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": errors.ErrMissingCredentials.Error()})
-	}
-	err := h.RegisterUseCase.Execute(input.Username, input.Password)
-	if err != nil {
-		if err == errors.ErrUserAlreadyExists {
-			return c.JSON(http.StatusBadRequest, map[string]string{"error": err.Error()})
-		}
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "internal error"})
-	}
-	return c.JSON(http.StatusCreated, map[string]string{"message": "user created"})
 }
